[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = "0.6.16"
axum-macros = "0.3.8"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"